--- a/web/templates/template.xhtml
+++ b/web/templates/template.xhtml
@@ -8,9 +8,9 @@
             <title><ui:insert name="titulo"></ui:insert></title>
         </h:head>
         <h:body>
-            <b:container style="color: forestgreen">
+            <b:container style="color: forestgreen;" >
                 <h:form id="formMenu">
-                    <b:navBar brand="SW">
+                    <b:navBar brand="SW" style="background-color: lightblue;">
                         <b:navbarLinks>
                             <b:navLink value="Inicio" outcome="inicio" style="color: darkcyan"/>                      
                         </b:navbarLinks>
